--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
     <title>Recipes</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <div class="logo">Hindinisikc Recipes</div>
+            <ul class="nav-links">
+                <li><a href="#">Food</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Recipes</a></li>
+
+                <label class="label">
+                    <div class="toggle">
+                        <input class="toggle-state" type="checkbox" name="check" value="check">
+                        <div class="indicator"></div>
+                    </div>
+                </label>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
