--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Recipes</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/header.css">
-    
+
 </head>
 <body>
     <header>
@@ -26,6 +26,16 @@
             </ul>
         </nav>
     </header>
+
+    <section class="hero">
+        <h1>
+            If only I enjoyed it for the taste
+        </h1>
+
+        <button>
+            Submit Recipe
+        </button>
+    </section>
     
 </body>
 </html>
