--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
 
 </head>
 <body>
+
     <header>
         <nav>
             <div class="logo">Hindinisikc Recipes</div>
@@ -35,6 +37,15 @@
         <button>
             Submit Recipe
         </button>
+    </section>
+
+    <section class="food-logo-bar">
+        <ul>
+            <li><a href="#"><i class="fa-solid fa-drumstick-bite"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-fish"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-egg"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-bacon"></i></a></li>
+        </ul>
     </section>
     
 </body>
