--- a/index.html
+++ b/index.html
@@ -48,5 +48,12 @@
         </ul>
     </section>
     
+    <section class="about-section">
+        <div class="about-context">
+            <h2>Oh hey, you found this.</h2>
+            <p>This is just a spot where I save my recipes so I don’t forget them. Nothing fancy, just food I like and wanna keep track of. Some are from family, some I just threw together and thought, “Yeah, that works.”
+                If you’re here, feel free to check ‘em out. Or don’t. Up to you.</p>
+        </div>
+    </section>
 </body>
 </html>
